--- a/src/components/request/choosingSpeciality/_styles/ChoosingSpeciality.module.scss
+++ b/src/components/request/choosingSpeciality/_styles/ChoosingSpeciality.module.scss
@@ -1,10 +1,24 @@
+.content {
+  width: 85%;
+  height: 100%;
+  padding: 6rem 0;
+      .paperTitle {
+        text-align: center;
+        line-height: 2.5rem;
+        margin-bottom: 20px;
+    
+      }
+}
+.inputSearch {
+  width: 100%;
+}
 .footer {
     position: fixed;
     bottom: 1rem;
     inset-inline: 0;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     padding: 1rem;
     z-index: 1000;
 }
@@ -49,3 +63,8 @@
     z-index: 50;
 }
 
+.list {
+  margin-top: 25px;
+  display : flex;
+  flex-direction: column;
+}
