--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,7 @@
 }
 :root {
   --font-family: "IRANSans";
+  --font-size : 14px
 }
 
 html,
@@ -25,10 +26,14 @@ body {
   height: 100%;
   overflow: hidden;
 }
+
 * {
   font-family: var(--font-family);
+  font-size : var(--font-size);
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+
 }
 .swiper-pagination-bullet-active {
   width: 20px !important;
@@ -40,4 +45,7 @@ body {
 }
 button {
   border: none;
+}
+h1 {
+  font-size: 1.5rem;
 }
