--- a/src/components/request/locationServices/_styles/LocationServices.module.scss
+++ b/src/components/request/locationServices/_styles/LocationServices.module.scss
@@ -1,10 +1,22 @@
+
+.content {
+width: 85%;
+  height: 100%;
+  padding: 6rem 0;
+   .paperTitle {
+        text-align: center;
+        line-height: 2.5rem;
+        margin-bottom: 20px;
+    
+      }
+}
 .footer {
     position: fixed;
     bottom: 1rem;
     inset-inline: 0;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     padding: 1rem;
     z-index: 1000;
 }
