--- a/src/components/panel/profile/_styles/Profile.module.scss
+++ b/src/components/panel/profile/_styles/Profile.module.scss
@@ -10,19 +10,21 @@
   display: flex;
   :global {
     button {
+      flex: 1;
       padding: 10px;
       box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.1);
       background-color: #f7f7f7 !important;
     }
     button[aria-selected="true"] {
-      background-color: #ddd !important;
-      font-size: 1rem;
+      background-color: #fff !important;
+      font-size: 1.05rem;
       font-weight: bold;
+      color: #1976D2;
     }
-    :nth-child(1) {
+    :first-child {
       border-bottom-right-radius: 12px;
     }
-    :nth-child(4) {
+    :last-child {
       border-bottom-left-radius: 12px;
     }
   }
@@ -33,6 +35,7 @@
     h1 {
       padding: 10px 0;
       text-align: center;
+      font-weight: 700;
     }
   }
 }
@@ -41,11 +44,6 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px 0;
-    :global {
-      :nth-child(1) {
-        font-weight: 700;
-      }
-    }
 }
 .badgeInfo {
   display: flex;
@@ -70,4 +68,12 @@
 }
 .footer {
   text-align: center;
+}
+.customFormGroup {
+  :global {
+    label {
+      font-weight: 600;
+      margin: 12px 0 ;
+    }
+  }
 }
