--- a/src/components/tech/entry/entry.module.scss
+++ b/src/components/tech/entry/entry.module.scss
@@ -4,7 +4,7 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
-    background-color: #ECA323;
+    background:linear-gradient(to top, #7569F4, #9187F6);
 }
 
 .wrapper {
@@ -43,7 +43,7 @@
     justify-content: center;
     align-items: center;
     margin-top: 4rem;
-    background-color: #ECA323;
+    background:linear-gradient(to top, #7569F4, #9187F6);
     color: #FFFFFF;
     padding: 1rem;
     border-radius: 2rem;
