--- a/src/components/welcome/_styles/welcome.module.scss
+++ b/src/components/welcome/_styles/welcome.module.scss
@@ -1,7 +1,7 @@
 .welcomeContainer {
     width: 100%;
     height: 100%;
-    background-color: #eca323;
+    background:linear-gradient(to top, #7569F4, #9187F6);
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     text-align: center; 
     padding: 20px;
@@ -48,7 +48,7 @@
     justify-content: center;
     align-items: center;
     margin-top: 4rem;
-    background-color: #ECA323;
+    background: linear-gradient(to top, #7569F4, #9187F6);
     color: #FFFFFF;
     padding: 1rem;
     border-radius: 2rem;
