update styles of intro pages and add check rules ro register page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,12 +45,13 @@ body {
 button {
   border: none;
 }
-h1 {
-  font-size: 1.5rem;
-}
+
 ul {
   list-style-type: none;
 }
 a {
   text-decoration: none;
+}
+a:visited , a:hover {
+  color: blue;
 }
