--- a/src/components/common/InputSearch/InputSearch.module.scss
+++ b/src/components/common/InputSearch/InputSearch.module.scss
@@ -1,6 +1,6 @@
 .inputSearch {
-    background-color: #fff;
-    border-radius: 25px;
+    background-color: #f8f8f8;
+    border-radius: 1rem;
     border: 1px solid #ccc;
     display: flex;
     align-items: center;
