--- a/src/components/common/Loading/Loading.module.scss
+++ b/src/components/common/Loading/Loading.module.scss
@@ -1,4 +1,4 @@
-
+@import "@/theme/colorTheme.scss"; 
 $dots: 5;
 
 .loaderContainer {
@@ -9,7 +9,7 @@ $dots: 5;
   .dot {
     width: 10px;
     height: 10px;
-    background-color: #ffce06;
+    background-color: $secondary;
     border-radius: 50%;
     margin: 0 5px;
     animation: bounce 1.1s ease infinite;
@@ -27,9 +27,9 @@ $dots: 5;
     transform: translateY(0);
   }
   40% {
-    transform: translateY(-60px);
+    transform: translateY(-10px);
   }
   60% {
-    transform: translateY(25px);
+    transform: translateY(20px);
   }
 }
