--- a/src/components/common/Progress/progress.module.scss
+++ b/src/components/common/Progress/progress.module.scss
@@ -1,18 +1,29 @@
+
 .progress {
   direction: ltr;
-  border-radius: 7px;
+  direction: ltr;
+  border-radius: 5px;
   width: 80%;
-  height: 15px;
+  height: 18px;
   position: fixed;
-  top: 2rem;
- 
+  top: 2.5rem;
+  margin: 0 auto;
 }
-.progress::-webkit-progress-value {
-  background-color: #eca323;
-  border-radius: 7px;
-  //   box-shadow: 1px 1px 5px 3px rgba( 255, 0, 0, 0.8 );
-}
+
 .progress::-webkit-progress-bar {
-  background-color: #eee;
-  border-radius: 7px;
+  background-color: #f0f0f0;
 }
+
+.progress::-webkit-progress-bar,
+.progress::-webkit-progress-value {
+  border-radius: 8px;
+}
+
+.progress::-moz-progress-bar {
+  border-radius: 8px;
+}
+
+.progress::-webkit-progress-value {
+  background: #185ee2;
+}
+
