--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,6 +52,8 @@ ul {
 a {
   text-decoration: none;
 }
-a:visited , a:hover {
-  color: blue;
+.mainContent {
+  background-color: #f2f2f2;
+  padding: 15px;
+  height: 100%;
 }
