--- a/src/components/panel/profile/_styles/Profile.module.scss
+++ b/src/components/panel/profile/_styles/Profile.module.scss
@@ -1,5 +1,7 @@
+
 .wrapper {
-  padding-top: 80px;
+  background-color: white;
+  padding-top: 75px;
   padding-bottom: 65px;
   height: 100%;
 }
@@ -71,6 +73,10 @@
 }
 .footer {
   text-align: center;
+  position: fixed;
+  right: 0;
+  left: 0;
+  bottom: 5.5rem;
 }
 .customFormGroup {
   :global {
@@ -78,4 +84,8 @@
       margin: 12px 0 ;
     }
   }
+}
+.customButton {
+  background-color: #fcc056 !important;
+  font-size: 1.04rem !important;
 }
