--- a/src/theme/colorTheme.scss
+++ b/src/theme/colorTheme.scss
@@ -2,4 +2,5 @@ $background_base_1 : #7569F4;
 $background_base_2 : #9187F6;
 $primary: #3d4977 !important;
 $secondary : #185ee2;
+$orange : #eca323;
 $transition: 0.3s ease;
