--- a/src/components/panel/profile/_styles/Profile.module.scss
+++ b/src/components/panel/profile/_styles/Profile.module.scss
@@ -72,11 +72,20 @@
   overflow-y: auto;
 }
 .footer {
+  display: flex;
+  justify-content: center;
   text-align: center;
   position: fixed;
   right: 0;
   left: 0;
+  width: 100%;
   bottom: 5.5rem;
+  :global {
+    .button-align {
+      text-align: center;
+      width: 90%;
+    }
+  }
 }
 .customFormGroup {
   :global {
