--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,14 @@
 :root {
   --font-family: "IRANSans";
   --font-size: 14px;
+  --color-brand--1: #ffb545;
+  --color-brand--2: #00c46a;
+  --color-dark--0: #242a2e;
+  --color-dark--1: #2d3439;
+  --color-dark--2: #42484d;
+  --color-light--1: #aaa;
+  --color-light--2: #ececec;
+  --color-light--3: #d6dee0;
 }
 
 html,
